30-sg-rules/main.tf
resource "aws_security_group_rule" "frontend_frontend_alb" {
  type              = "ingress"
  security_group_id = local.frontend_sg_id
  source_security_group_id = local.frontend_alb_sg_id
  from_port = 80
  to_port = 80
  protocol = "tcp"
}

resource "aws_security_group_rule" "frontend_bastion" {
  type              = "ingress"
  security_group_id = local.frontend_sg_id
  source_security_group_id = local.bastion_sg_id
  from_port = 22
  to_port = 22
  protocol = "tcp"
}

resource "aws_security_group_rule" "bastion_backend_alb" {
  type              = "ingress"
  security_group_id = local.bastion_sg_id
  source_security_group_id = local.backend_alb_sg_id
  from_port = 22
  to_port = 22
  protocol = "tcp"
}

resource "aws_security_group_rule" "bastion_laptop" {
  type              = "ingress"
  security_group_id = local.bastion_sg_id
  cidr_blocks = ["0.0.0.0/0"]
  from_port = 22
  to_port = 22
  protocol = "tcp"
}

resource "aws_security_group_rule" "mongodb_bastion" {
  type              = "ingress"
  security_group_id = local.mongodb_sg_id
  source_security_group_id = local.bastion_sg_id
  from_port = 22
  to_port = 22
  protocol = "tcp"
}

resource "aws_security_group_rule" "redis_bastion" {
  type              = "ingress"
  security_group_id = local.redis_sg_id
  source_security_group_id = local.bastion_sg_id
  from_port = 22
  to_port = 22
  protocol = "tcp"
}

resource "aws_security_group_rule" "rabbitmq_bastion" {
  type              = "ingress"
  security_group_id = local.rabbitmq_sg_id
  source_security_group_id = local.bastion_sg_id
  from_port = 22
  to_port = 22
  protocol = "tcp"
}

resource "aws_security_group_rule" "mysql_bastion" {
  type              = "ingress"
  security_group_id = local.mysql_sg_id
  source_security_group_id = local.bastion_sg_id
  from_port = 22
  to_port = 22
  protocol = "tcp"
}
